--- a/front-end/package.json
+++ b/front-end/package.json
@@ -8,10 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.5",
     "dotenv": "^16.3.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "universal-cookie": "^7.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
