--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,7 +10,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.13.2",
-    "axios": "^1.6.5",
+    "axios": "^1.6.7",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.3.2",
     "jwt-decode": "^4.0.0",
     "nodemailer": "^6.9.8",
@@ -21,7 +22,8 @@
     "react-scripts": "^5.0.1",
     "universal-cookie": "^7.0.1",
     "uuid": "^9.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
