--- a/front-end/package.json
+++ b/front-end/package.json
@@ -22,8 +22,7 @@
     "react-scripts": "^5.0.1",
     "universal-cookie": "^7.0.1",
     "uuid": "^9.0.1",
-    "web-vitals": "^2.1.4",
-    "xlsx": "^0.18.5"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
