--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,14 +13,17 @@
     "axios": "^1.6.7",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.3.2",
+    "install": "^0.13.0",
     "jwt-decode": "^4.0.0",
     "nodemailer": "^6.9.8",
+    "npm": "^10.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
     "react-select": "^5.8.0",
+    "react-spinners": "^0.13.8",
     "universal-cookie": "^7.0.1",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
