--- a/front-end/package.json
+++ b/front-end/package.json
@@ -3,20 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.4",
     "@google-cloud/local-auth": "^3.0.1",
     "@googleapis/forms": "^2.0.5",
     "@react-email/render": "^0.0.12",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@tanstack/react-table": "^8.13.2",
     "antd": "^5.13.2",
     "axios": "^1.6.7",
-    "csv-parser": "^3.0.0",
     "dotenv": "^16.3.2",
     "install": "^0.13.0",
     "jwt-decode": "^4.0.0",
     "nodemailer": "^6.9.8",
-    "npm": "^10.4.0",
+    "npm": "^10.5.0",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
@@ -24,6 +23,7 @@
     "react-scripts": "^5.0.1",
     "react-select": "^5.8.0",
     "react-spinners": "^0.13.8",
+    "react-table": "^7.8.0",
     "universal-cookie": "^7.0.1",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
