--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,6 +10,7 @@
     "@tanstack/react-table": "^8.13.2",
     "antd": "^5.13.2",
     "axios": "^1.6.7",
+    "bootstrap": "^5.3.3",
     "dotenv": "^16.3.2",
     "install": "^0.13.0",
     "jwt-decode": "^4.0.0",
@@ -17,6 +18,7 @@
     "npm": "^10.5.0",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
