--- a/front-end/package.json
+++ b/front-end/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-iframe": "^1.8.5",
     "react-image-gallery": "^1.3.0",
     "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^6.21.3",
